All files in src converted to UTF-8 from Windows-1251

--- a/src/kryptoV2/html_texts/MD5.html
+++ b/src/kryptoV2/html_texts/MD5.html
@@ -6,7 +6,7 @@
 <h1 align="center"> MD 5</h1>
 <hr />
 
-<p style="font-size: 25px">В разработке. . .</p>
+<p style="font-size: 25px">Р’ СЂР°Р·СЂР°Р±РѕС‚РєРµ. . .</p>
 
 										
 										
