--- a/src/kryptoV2/html_texts/info.html
+++ b/src/kryptoV2/html_texts/info.html
@@ -3,23 +3,23 @@
 </head>
 
 <body>
-<h1 align="center"> Инофрмация о продукте</h1>
+<h1 align="center"> РРЅРѕС„СЂРјР°С†РёСЏ Рѕ РїСЂРѕРґСѓРєС‚Рµ</h1>
 <hr />
 
-<p style="font-size: 25px">В данной программе используются алфавиты :</p>
+<p style="font-size: 25px">Р’ РґР°РЅРЅРѕР№ РїСЂРѕРіСЂР°РјРјРµ РёСЃРїРѕР»СЊР·СѓСЋС‚СЃСЏ Р°Р»С„Р°РІРёС‚С‹ :</p>
 										<ul>
-												<li style="font-size: 15px">RU : АаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя </li>
+												<li style="font-size: 15px">RU : РђР°Р‘Р±Р’РІР“РіР”РґР•РµРЃС‘Р–Р¶Р—Р·РРёР™Р№РљРєР›Р»РњРјРќРЅРћРѕРџРїР СЂРЎСЃРўС‚РЈСѓР¤С„РҐС…Р¦С†Р§С‡РЁС€Р©С‰РЄСЉР«С‹Р¬СЊР­СЌР®СЋРЇСЏ </li>
 												<li style="font-size: 15px">ENG : AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</li>
 										</ul>
 <hr />
-<p style="font-size: 25px">Использование : </p>
+<p style="font-size: 25px">РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ : </p>
 										<ul>
-												<li style="font-size: 15px">Во вкладке "Выбор шифра" выберите интересующий ваш шифр</li>
-												<li style="font-size: 15px">Во вкладке "Параметры шифрования/дешифрования" введите ключ, выберите язык и нажмите кнопку "Сохранить параметры"</li>
-												<li style="font-size: 15px">Во вкладке "Ввод текста" в верхнее поле введите текст и зашифруйте его(кнопка F7) или дешифруйте(кнопка F8)</li>
+												<li style="font-size: 15px">Р’Рѕ РІРєР»Р°РґРєРµ "Р’С‹Р±РѕСЂ С€РёС„СЂР°" РІС‹Р±РµСЂРёС‚Рµ РёРЅС‚РµСЂРµСЃСѓСЋС‰РёР№ РІР°С€ С€РёС„СЂ</li>
+												<li style="font-size: 15px">Р’Рѕ РІРєР»Р°РґРєРµ "РџР°СЂР°РјРµС‚СЂС‹ С€РёС„СЂРѕРІР°РЅРёСЏ/РґРµС€РёС„СЂРѕРІР°РЅРёСЏ" РІРІРµРґРёС‚Рµ РєР»СЋС‡, РІС‹Р±РµСЂРёС‚Рµ СЏР·С‹Рє Рё РЅР°Р¶РјРёС‚Рµ РєРЅРѕРїРєСѓ "РЎРѕС…СЂР°РЅРёС‚СЊ РїР°СЂР°РјРµС‚СЂС‹"</li>
+												<li style="font-size: 15px">Р’Рѕ РІРєР»Р°РґРєРµ "Р’РІРѕРґ С‚РµРєСЃС‚Р°" РІ РІРµСЂС…РЅРµРµ РїРѕР»Рµ РІРІРµРґРёС‚Рµ С‚РµРєСЃС‚ Рё Р·Р°С€РёС„СЂСѓР№С‚Рµ РµРіРѕ(РєРЅРѕРїРєР° F7) РёР»Рё РґРµС€РёС„СЂСѓР№С‚Рµ(РєРЅРѕРїРєР° F8)</li>
 										</ul>
 <hr />		
-<p style="font-size: 25px">Разработчик : Сальцин Артемий</p>
+<p style="font-size: 25px">Р Р°Р·СЂР°Р±РѕС‚С‡РёРє : РЎР°Р»СЊС†РёРЅ РђСЂС‚РµРјРёР№</p>
 										
 										
 </body>
