--- a/src/kryptoV2/html_texts/SHA1.html
+++ b/src/kryptoV2/html_texts/SHA1.html
@@ -6,7 +6,7 @@
 <h1 align="center"> SHA 1</h1>
 <hr />
 
-<p style="font-size: 25px">В разработке. . .</p>
+<p style="font-size: 25px">Р’ СЂР°Р·СЂР°Р±РѕС‚РєРµ. . .</p>
 
 										
 										
