Fixed bugs with unicode in atbash.html file

--- a/src/kryptoV2/html_texts/atbash.html
+++ b/src/kryptoV2/html_texts/atbash.html
@@ -4,31 +4,31 @@
 	
 	<body>
 		
-		<h1 align="center">?????</h1>
+		<h1 align="center">Атбаш</h1>
 		<hr />
-		<p style="font-size: 25px">???? ????? ??? ?????? ??????? ??? ???????? ?????? ???? ? ????????, ????? ????? ???????? 
-		?????????????. ?????? ???? ????? ? ?????? ???? ???????? ?????????, ???????, ? ???? ???????, 
-		???????? ?? ???????. ????? ????? ?????????? ?????????? ????????? ?????? ? ??????? ?????? ??????.
-		????? ???????, ???? ??? ??????????? ?? ?????????? ?????? ???, ?? ????? 500 ?? ?. ?. ?? 1300 ?. 
-		?. ?. ? ???????, ????? ????? ?????????? ??? ????????.</p>
-		<p style="font-size: 25px">????? ? ????? ??????? ????, ?? ??????? ? ?????? i-? ????? ???????? ?????? ? ??????? n-i+1, 
-		??? n-????? ???? ? ???????? (?????? ? ??????? ???????). ?????? ??? ?????????? ????????: </p>
+		<p style="font-size: 25px">Шифр Атбаш был создан Ессеями для сокрытия важных имен и названий, чтобы потом избежать
+			преследования. Знания этих кодов и шифров были переданы Гностикам, которые, в свою очередь,
+			передали их Катарам. Позже Орден Тамплиеров завербовал Катарских дворян и перенял знания шифров.
+			Таким образом, шифр был использован на протяжении многих лет, от около 500 до н. э. до 1300 г.
+			н. э. — момента, когда Орден Тамплиеров был распущен.</p>
+		<p style="font-size: 25px">Атбаш – самый простой шифр, он состоит в замене i-й буквы алфавита буквой с номером n-i+1,
+			где n-число букв в алфавите (нижний и верхний регистр). Пример для латинского алфавита: </p>
 		<ul>
-			<li style="font-size: 20px">???????? ?????: abcdefghijklmnopqrstuvwxyz </li>
-			<li style="font-size: 20px">????????????? ?????: ZYXWVUTSRQPONMLKJIHGFEDCBA</li>
+			<li style="font-size: 20px">Исходный текст: abcdefghijklmnopqrstuvwxyz </li>
+			<li style="font-size: 20px">Зашифрованный текст: ZYXWVUTSRQPONMLKJIHGFEDCBA</li>
 		</ul>
-		<p style="font-size: 25px">?????? ??? ???????? ????????:</p>
+		<p style="font-size: 25px">Пример для русского алфавита:</p>
 		<ul >
-			<li style="font-size: 15px">???????? ???????: ???????????????????????????????????????????????????????????????? </li>
-			<li style="font-size: 15px">????????????? ???????: ?????????????????????????????????????????????????????????????????</li>
+			<li style="font-size: 15px">Исходный алфавит: АаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя </li>
+			<li style="font-size: 15px">Зашифрованный алфавит: яЯюЮэЭьЬыЫъЪщЩшШчЧцЦхХфФуУтТсСрРпПоОнНмМлЛкКйЙиИзЗжЖёЁеЕдДгГвВбБаА</li>
 		</ul>
 		
-		<p style="font-size: 25px">??????????:</p>
-		<p style="font-size: 25px">????????, ?????? ????? ???, ???????? ????????, ? ????? 1. ????? ???? ?
-		                				???????? ?????? ? ?????? ? ??????? ????????? ????? 65,
-		                				????? ???????, ?? ?????? ???????: 64-1+1=64, 64-?? ????? ??? ??,
-		                				? ????? ???, ??????? ? ???????? ?? ??????? ???????, ???????????? ?? ? ???,
-		                				??? ?????????? ????????? ??????? ??? ???.</p>
+		<p style="font-size: 25px">Объяснение:</p>
+		<p style="font-size: 25px">Например, возьмём букву “а”, русского алфавита, её номер 1. Число букв в
+			алфавите вместе с нижним и верхним регистром равно 65,
+			таким образом, по данной формуле: 64-1+1=64, 64-ая буква это “Я”,
+			а буква “А”, стоящая в алфавите на нулевой позиции, превратилась бы в “я”,
+			для дешифровки применяем формулу ещё раз.</p>
 										
 		</body>
 		
